--- a/code/Makefile
+++ b/code/Makefile
@@ -1,5 +1,5 @@
 build:
-	gcc process_generator.c -o process_generator.out
+	gcc list.c queue.c process_generator.c -o process_generator.out
 	gcc clk.c -o clk.out
 	gcc scheduler.c -o scheduler.out
 	gcc process.c -o process.out
