feat(scheduler): Main setup for scheduler

--- a/code/Makefile
+++ b/code/Makefile
@@ -1,8 +1,10 @@
+.PHONY: build all clean test
+
 build:
 	gcc list.c queue.c process_generator.c -o process_generator.out
 	gcc clk.c -o clk.out
-	gcc scheduler.c -o scheduler.out
-	gcc process.c -o process.out
+	gcc list.c scheduler.c -o scheduler.out
+	gcc list.c process.c -o process.out
 	gcc test_generator.c -o test_generator.out
 
 clean:
