feat(scheduler): Create base functionality of all algorithms

--- a/code/Makefile
+++ b/code/Makefile
@@ -1,9 +1,9 @@
 .PHONY: build all clean test
 
 build:
-	gcc list.c queue.c process_generator.c -o process_generator.out
+	gcc list.c queue.c process_generator.c -o process_generator.out -lm
 	gcc clk.c -o clk.out
-	gcc list.c scheduler.c -o scheduler.out
+	gcc list.c queue.c minHeap.c scheduler.c -o scheduler.out
 	gcc list.c process.c -o process.out
 	gcc test_generator.c -o test_generator.out
 
