--- a/code/Makefile
+++ b/code/Makefile
@@ -2,8 +2,10 @@
 
 all: build run
 
+FLAGS = -lraylib -lGL -lm -lpthread -ldl -lrt -lX11  `pkg-config --cflags --libs gtk+-3.0`
+
 build:
-	gcc list.c queue.c process_generator.c -o process_generator.out
+	gcc list.c queue.c process_generator.c -o process_generator.out $(FLAGS)
 	gcc clk.c -o clk.out
 	gcc list.c queue.c minHeap.c memory.c scheduler.c -o scheduler.out
 	gcc list.c process.c -o process.out
